--- a/.github/workflows/pruebagithubactions.yml
+++ b/.github/workflows/pruebagithubactions.yml
@@ -1,16 +1,31 @@
 name: Github Actions Practice
+
 on: [push]
+
 jobs:
-  Explore-Github-Actions:
+  Explorando-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "El flujo de trabajo ha sido ejecutado en el evento: ${{ github.event_name }}"
-      - run: echo "El trabajo se está ejecutado en un servidor ${{ runner.os }} hospedado en Github"
-      - run: echo "El nombre de la rama es: ${{ github.ref }} y tu repositorio es: ${{ github.repository }}."
-      - name: Verificar el codigo del repositorio
+      - name: Mostrar información del evento
+        run: echo "El flujo de trabajo ha sido ejecutado en el evento:${{ github.event_name }}"
+
+      - name: Mostrar información del runner
+        run: echo "El trabajo se está ejecutando en un servidor ${{ runner.os }} hospedado en Github"
+
+      - name: Mostrar información del repositorio
+        run: echo "El nombre de la rama es:${{ github.ref }} y tu repositorio es:${{ github.repository }}"
+
+      - name: Verificar el código del repositorio
         uses: actions/checkout@v2
-      - run: echo "El repositorio: ${{ github.repository }} ha sido clonado al runner."
-      - run: echo "El flujo de trabajo esta listo para verificar el codigo en el runner."
+
+      - name: Confirmar clonación
+        run: echo "El repositorio:${{ github.repository }} ha sido clonado al runner"
+
+      - name: Mensaje de preparación
+        run: echo "El flujo de trabajo esta listo para verificar el código en el runner"
+
       - name: Listar archivos en el repositorio
-        run: ls ${{ github.workspace }}
-      - run: echo "El estado del trabajo es: ${{ job.status }}."
+        run: ls -la
+
+      - name: Mostrar estado del trabajo
+        run: echo "El estado del trabajo es:${{ job.status }}"
